--- a/eas.json
+++ b/eas.json
@@ -5,12 +5,37 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "API_KEY": "AIzaSyAoMOuHE0CRvhX15NKO8W-__LJKSG4RUu8",
+        "AUTH_DOMAIN": "practica-firebase-20220287.firebaseapp.com",
+        "PROJECT_ID": "practica-firebase-20220287",
+        "STORAGE_BUCKET": "practica-firebase-20220287.appspot.com",
+        "MESSAGING_SENDER_ID": "1061136136445",
+        "APP_ID": "1:1061136136445:web:4d7aee37725e616c552694"
+      }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "API_KEY": "AIzaSyAoMOuHE0CRvhX15NKO8W-__LJKSG4RUu8",
+        "AUTH_DOMAIN": "practica-firebase-20220287.firebaseapp.com",
+        "PROJECT_ID": "practica-firebase-20220287",
+        "STORAGE_BUCKET": "practica-firebase-20220287.appspot.com",
+        "MESSAGING_SENDER_ID": "1061136136445",
+        "APP_ID": "1:1061136136445:web:4d7aee37725e616c552694"
+      }
     },
-    "production": {}
+    "production": {
+      "env": {
+        "API_KEY": "AIzaSyAoMOuHE0CRvhX15NKO8W-__LJKSG4RUu8",
+        "AUTH_DOMAIN": "practica-firebase-20220287.firebaseapp.com",
+        "PROJECT_ID": "practica-firebase-20220287",
+        "STORAGE_BUCKET": "practica-firebase-20220287.appspot.com",
+        "MESSAGING_SENDER_ID": "1061136136445",
+        "APP_ID": "1:1061136136445:web:4d7aee37725e616c552694"
+      }
+    }
   },
   "submit": {
     "production": {}
